<resources>
    <string name="app_name">praca_inz</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_contact">Contact</string>
    <string name="title_allergies">Allergies</string>
    <string name="title_meals">Food</string>
    <string name="title_profile">Profile</string>
    <string name="title_contactWith">Contact with</string>
    <string name="usernameText">Username :</string>
    <string name="passwordText">Password :</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="headerLoginText">Log in to Allergy Diary</string>
    <string name="repeatPasswordText">Repeat password :</string>
    <string name="emailText">Email :</string>
    <string name="phoneNumberText">Phone number:</string>
    <string name="headerRegisterText">Register your account</string>
    <string name="headerPersonsText">Persons</string>
    <string name="addPersonButtonText">Add person</string>
    <string name="nameAddPersonText">Name :</string>
    <string name="surnameAddPersonText">Surname :</string>
    <string name="dateAddPersonText">Date od birth :</string>
    <string name="headerAddPersonText">Add Person</string>
    <string name="saveButtonText">Save</string>
    <string name="headerEditPersonText">Edit Person</string>
    <string name="backText">Back</string>
    <string name="addText">Add</string>
    <string name="snackTabText">Snack</string>
    <string name="mealsTabText">Meal</string>
    <string name="componentTabText">Component</string>
    <string name="addMealMealsText">Add Meal</string>
    <string name="addSnackMealsText">Add Snack</string>
    <string name="addComponentMealsText">Add Component</string>
    <string name="componentNameText">Component name :</string>
    <string name="snackNameText">Snack name :</string>
    <string name="addChemistryText">Add chemistry</string>
    <string name="addPlantText">Add plant</string>
    <string name="addAnimalText">Add animal</string>
    <string name="addContactItem">Add position</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addToFavourite">Add to favourites</string>
    <string name="loggedInAs">Logged in as :</string>
    <string name="changePassword">Change Password</string>
    <string name="changePerson">Change Person</string>
    <string name="add_food_on_the_day">Add food on the day</string>
    <string name="add_contact_on_the_day">Add contact on the day</string>
    <string name="chemistry">chemistry</string>
    <string name="plant">plant</string>
    <string name="animal">animal</string>
    <string name="colon">:</string>
    <string name="changeEmail">Change email</string>
    <string name="changePhoneNumber">Change phone number</string>
    <string name="composition">Composition:</string>
    <string name="addFood">Add Food</string>
    <string name="chooseFoodType">Choose the type of food</string>
    <string name="chooseContactType">Choose the type of contact</string>
    <string name="confirmation">Are you sure you want to delete this item?</string>
    <string name="deletionInformation">If you delete this item, it will be automatically removed from the allergy item.</string>
    <string name="deletingInformation">Deleting items</string>
    <string name="managementPanel">Management panel</string>
    <string name="addingToAllergies">Adding to allergies</string>
    <string name="addingToAllergiesInformation">When adding an allergy item, you will need to fill out a form that will serve as your report. The time after which symptoms occur, how to deal with the allergy and what happens when allergies occur, should be specified.</string>
    <string name="addingToAllergiesQuestion">Are you sure you want to add the item to the allergy list?</string>
    <string name="sure">Yes, I am sure</string>
    <string name="addContact">Add Contact</string>
    <string name="possibleAllergen">Possible allergen :</string>
    <string name="allergyReport">Allergy Report</string>
    <string name="afterTime">How long do symptoms take?</string>
    <string name="time">Time:</string>
    <string name="allergyName">Name of the allergy :</string>
    <string name="symptoms">Give symptoms :</string>
    <string name="symptomsHint">Symptoms :</string>
    <string name="howToHelp">How can I help with allergies?</string>
    <string name="help">Help:</string>
    <string name="addAllergy">Add allergy report</string>
    <string name="allergiesInformation">Allergies Information</string>
    <string name="howHelp">How can you help with allergies :</string>
    <string name="whatSymptoms">What are the symptoms of an allergy :</string>
    <string name="afterWhatTime">How long do allergy symptoms appear :</string>
    <string name="whatCaused">What triggered the allergies :</string>
    <string name="deleteAllergy">If the allergy is no longer present, you can remove it by clicking the button below. Be careful, this process cannot be undone.</string>
    <string name="deleteAllergyButton">Delete Allergy</string>
    <string name="chooseTime">Please select time :</string>
    <string name="selected_food">Selected food :</string>
    <string name="selectMeal">Select Meal</string>
    <string name="selectSnack">Select snack</string>
    <string name="selectComponent">Select component</string>
    <string name="click_by_remove">(Click on items to delete)</string>
    <string name="addingInformation">Adding item to day</string>
    <string name="confirm">Confirm</string>
    <string name="select_date">Please select date :</string>


    <string-array name="contact_things">
        <item>Chemistry</item>
        <item>Plant</item>
        <item>Animal</item>
    </string-array>

    <string-array name="food_things">
        <item>Meal</item>
        <item>Snack</item>
        <item>Component</item>
    </string-array>

    <string-array name="type_allergies">
        <item>Food allergy</item>
        <item>Inhalation allergy</item>
        <item>Contact allergy</item>
    </string-array>
</resources>