<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="reportViewModel"
            type="com.example.praca_inz.ui.reportAllergy.ReportAllergyViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorTopBar"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allergyReport"
                    android:theme="@style/HeadersText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundAppColor"
            android:layout_marginBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundAppColor">


            <EditText
                android:id="@+id/etAllergyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/nameAddPersonText"
                android:maxLength="28"
                android:theme="@style/EditTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView28"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/black"
                android:text="@string/allergyName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/afterTime"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/etAllergyName" />

            <EditText
                android:id="@+id/etAfterTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/time"
                android:maxLength="28"
                android:textColorHint="@color/black"
                android:theme="@style/EditTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/symptoms"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/etAfterTime" />

            <EditText
                android:id="@+id/etSymptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/symptomsHint"
                android:theme="@style/EditTextStyle"
                android:minHeight="48dp"
                android:maxLines="3"
                android:maxLength="256"
                android:lines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView30"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:text="@string/howToHelp"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/etSymptoms" />

            <EditText
                android:id="@+id/etHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/help"
                android:importantForAutofill="no"
                android:lines="3"
                android:maxLength="256"
                android:maxLines="3"
                android:minHeight="48dp"
                android:theme="@style/EditTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22" />

            <Button
                android:id="@+id/addAllergyReportButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/addAllergy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etHelp"
                app:layout_constraintStart_toStartOf="@+id/etHelp"
                app:layout_constraintTop_toBottomOf="@+id/etHelp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>



</layout>