<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registrationViewModel"
            type="com.example.praca_inz.authorization.registration.RegistrationViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerLoginTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/headerRegisterText"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/nameAddPersonText"
                android:inputType="textPersonName"
                android:theme="@style/EditTextStyle"

                android:maxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerLoginTxt"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="16"
                android:theme="@style/EditTextStyle"
                android:hint="@string/surnameAddPersonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:theme="@style/EditTextStyle"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/passwordText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:maxLength="26"
                android:theme="@style/EditTextStyle"
                android:inputType="textEmailAddress"
                android:hint="@string/emailText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSurname"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/phoneNumberText"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="9"
                android:theme="@style/EditTextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/registerButtonText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>